<resources>
    <string name="app_name">NewsReader</string>

    <string name="no_connection">No Internet Connection</string>
    <string name="no_results">No Results Found</string>
    <string name="search">Search</string>

    <string name="search_results">Search Results</string>
    <string name="latest_news">Latest News</string>
    <string name="us_news">US</string>
    <string name="world_news">World</string>
    <string name="business_news">Business</string>
    <string name="sports_news">Sport</string>
    <string name="culture_news">Culture</string>
</resources>
